<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    >

    
    	<LinearLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="vertical"
 	    android:gravity="center_horizontal"
 	    >
 	    
 	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/savedAccounts"
	        android:textScaleX="1.5"
	        />
 	    
 	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/empty"
	        android:textScaleX="4"
	        />
 	    
 	    </LinearLayout>
    
 	<LinearLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="vertical"
 	    >
 	    
 	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/savedAccountsMessage"
	        
	        />
 	    
 	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/empty"
	        android:textScaleX="1"
	        />
 	    
 	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/deleteUserAccount"
	        
	        />
 	    
 	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/empty"
	        android:textScaleX="1"
	        />
 	    
 	    <!-- Addition in Version 3.0
 	    	I have added a new LinearLayout so that i can add
 	    	the Or Image (text) and the facebook login button.
 	    	If the user touches the Login Button then he will go through the 
 	    	authentication process of Facebook. 
 	    
 	     -->
 	    
 	    <LinearLayout android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:orientation="horizontal"
 	        >
	 	    <TextView 
	 	        android:id="@+id/addUserAccounts"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/addANewUserAccount"
		        
		        />
	 	   
	    	
	    	 <ImageView 
	    	    android:id="@+id/or"
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	    	    android:paddingLeft="10dp"
	    	    android:src="@drawable/or"
	    	    />
	    	 
	    	
	    	<ImageView 
	    	    android:id="@+id/facebookLogin"
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	    	    android:src="@drawable/login"
	    	    />
	    	 
 	    
 	    	</LinearLayout>
 	    
 	       <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/empty"
	        android:textScaleX="1"
	        />
 	    
 	    	    
 	    
    
 	    </LinearLayout>
    
 	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
 		<LinearLayout
	 	    android:id="@+id/LinearLayout02"
	 	    android:layout_width="fill_parent"
	 	    android:layout_height="wrap_content"
	 	    android:orientation="vertical"
 	    >
 	    </LinearLayout>
 	  </ScrollView>
    	    
 	
</LinearLayout>